--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ deploy:
   - provider: script
     skip_cleanup: true
     script:
-    - curl -f -T async-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uashatalov:$BINTRAY_API_KEY "https://api.bintray.com/content/ashatalov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/async-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial;deb_component=main;deb_architecture=amd64;publish=1"
+    - curl -f -T bulk_server-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uashatalov:$BINTRAY_API_KEY "https://api.bintray.com/content/ashatalov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/bulk_server-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial;deb_component=main;deb_architecture=amd64;publish=1"
