--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ compiler: clang
 addons:
   apt:
     packages:
-    - libboost-all-dev
+    - libboost-test-dev
+    - libboost-system-dev
     - doxygen
     - graphviz
 script:
