--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: cpp
 compiler: clang
 install:
-  - sudo apt-get install libboost-system1.71-dev
+  - sudo apt-get install libboost-system-dev
 addons:
   apt:
     packages:
