--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ dist: xenial
 language: cpp
 compiler: clang
 install:
-  - sudo apt-get install libboost-system-dev
+  - sudo add-apt-repository ppa:boost-latest/ppa
+  - sudo apt-get update
+  - sudo apt-get install libboost1.71-system-dev
 addons:
   apt:
     packages:
