--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
 dist: xenial
 language: cpp
 compiler: clang
-install:
-  - sudo add-apt-repository ppa:boost-latest/ppa
-  - sudo apt-get update
-  - sudo apt-get install libboost1.71-system-dev
 addons:
   apt:
     packages:
-    - libboost-test-dev
     - doxygen
     - graphviz
 script:
+- sudo add-apt-repository ppa:boost-latest/ppa
+- sudo apt-get update
+- sudo apt-get install libboost1.71-all-dev
 - cmake .
 - cmake --build .
 - cmake --build . --target test
