--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: cpp
 compiler: clang
 before_install:
-  - sudo add-apt-repository ppa:boost-latest/ppa
+  - sudo add-apt-repository -y ppa:boost-latest/ppa
   - sudo apt-get update
 install:
   - sudo apt-get install libboost1.71-all-dev
