--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 dist: xenial
 language: cpp
 compiler: clang
-before_install:
-  - sudo add-apt-repository -y ppa:boost-latest/ppa
-  - sudo apt-get update
 install:
+  - sudo add-apt-repository ppa:boost-latest/ppa -y
+  - sudo apt-get upgrade
   - sudo apt-get install libboost1.71-all-dev
 addons:
   apt:
