--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 compiler: clang
 install:
   - sudo add-apt-repository ppa:boost-latest/ppa -y
-  - sudo apt-get upgrade
+  - sudo apt-get upgrade skip errors
   - sudo apt-get install libboost1.71-all-dev
 addons:
   apt:
