--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: cpp
 compiler: clang
 install:
   - sudo add-apt-repository ppa:boost-latest/ppa -y
-  - sudo apt-get upgrade libboost1.71-all-dev
+  - sudo apt-get upgrade skip errors
+  - sudo apt-get install libboost1.71-all-dev
 addons:
   apt:
     packages:
