--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,15 @@ dist: xenial
 language: cpp
 compiler: clang
 install:
-  # Install conan
-  - pip install conan
-  # Automatic detection of your arch, compiler, etc.
-  - conan user
+  - sudo add-apt-repository ppa:boost-latest/ppa -y
+  - sudo apt-get update
+  - sudo apt-get install libboost1.71-all-dev
 addons:
   apt:
     packages:
     - doxygen
     - graphviz
 script:
-# Download dependencies, build, test and create package
-- conan create . user/channel
 - cmake .
 - cmake --build .
 - cmake --build . --target test
