--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ compiler: clang
 install:
   - sudo add-apt-repository ppa:boost-latest/ppa -y
   - sudo apt-get update
-  - sudo apt-get install libboost1.71-all-dev
 addons:
   apt:
     packages:
+    - libboost1.71-test-dev
+    - libboost1.71-system-dev
     - doxygen
     - graphviz
 script:
