remove trash remove async lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,15 @@ configure_file(version.h.in ${PROJECT_SOURCE_DIR}/version.h)
 
 add_executable(test_version tests/test_version.cpp src/Bulkmt.h)
 
-add_executable(bulk_client bulk_client.cpp)
-add_executable(bulk_server bulk_server.cpp)
-
 file(GLOB_RECURSE TARGET_SRC "src/*.cpp" "src/*.h")
-add_library(async SHARED ${TARGET_SRC})
+add_executable(${PROJECT_NAME} bulk_server.cpp ${TARGET_SRC})
+
+#add_library(async SHARED ${TARGET_SRC})
 add_library(patch_version lib.cpp)
 
-set_target_properties(async PROPERTIES PUBLIC_HEADER src/async.h)
+#set_target_properties(async PROPERTIES PUBLIC_HEADER src/async.h)
 
-set_target_properties(bulk_client bulk_server async patch_version test_version PROPERTIES
+set_target_properties(${PROJECT_NAME} patch_version test_version PROPERTIES
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED ON
         COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
@@ -31,32 +30,30 @@ set_target_properties(test_version PROPERTIES
         )
 
 set(COMMON_LIBS
-        async
         patch_version
         Threads::Threads
         ${Boost_LIBRARIES}
         boost_system)
 
-target_link_libraries(bulk_client ${COMMON_LIBS})
-target_link_libraries(bulk_server ${COMMON_LIBS})
+#target_link_libraries(bulk_client ${COMMON_LIBS})
+target_link_libraries(${PROJECT_NAME} ${COMMON_LIBS})
 
 target_link_libraries(test_version
         ${Boost_LIBRARIES}
         patch_version
         )
 
-target_include_directories(async PRIVATE src)
-
-target_include_directories(bulk_client PUBLIC src)
-target_include_directories(bulk_server PUBLIC src)
+#target_include_directories(async PRIVATE src)
+#target_include_directories(bulk_client PUBLIC src)
+target_include_directories(${PROJECT_NAME} PUBLIC src)
 target_include_directories(test_version PUBLIC src)
 
-install(TARGETS async
-        LIBRARY DESTINATION lib
-        PUBLIC_HEADER DESTINATION lib)
-
-install(TARGETS bulk_client RUNTIME DESTINATION bin)
-install(TARGETS bulk_server RUNTIME DESTINATION bin)
+#install(TARGETS async
+#        LIBRARY DESTINATION lib
+#        PUBLIC_HEADER DESTINATION lib)
+#
+#install(TARGETS bulk_client RUNTIME DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 
 
 set(CPACK_GENERATOR DEB)
